# rpsgame

./: README.md  RPSGame.cabal
src/: Main.hs  User.hs
src/Event/: ToEvent.hs  WSEvent.hs
src/Manager/: Abstract.hs  RPS.hs
